--- a/app/src/main/res/layout/activity_save_user_data.xml
+++ b/app/src/main/res/layout/activity_save_user_data.xml
@@ -46,24 +46,16 @@
             android:id="@+id/password"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/remember_pass"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="记住密码"/>
 
-    </LinearLayout>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/login"
         android:text="存储"/>
+
+    <Button
+        android:text="清除"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/clear" />
 </LinearLayout>
