获取验证码图片，完成

--- a/app/src/main/res/layout/activity_login_in.xml
+++ b/app/src/main/res/layout/activity_login_in.xml
@@ -51,8 +51,8 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:id="@+id/check_picture"
         android:src="@drawable/chaiquan"/>
 
@@ -61,6 +61,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/login_in"
         android:text="登录"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/get_picture"
+        android:text="获取验证码"/>
 
     <ScrollView
         android:layout_width="match_parent"
