--- a/app/src/main/res/layout/activity_login_in.xml
+++ b/app/src/main/res/layout/activity_login_in.xml
@@ -50,6 +50,25 @@
             android:id="@+id/password"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"
+            android:text="验证码"/>
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:hint="点击“获取验证码”获取验证码"
+            android:id="@+id/check_number"/>
+    </LinearLayout>
+
     <ImageView
         android:layout_width="200dp"
         android:layout_height="100dp"
