--- a/app/src/main/res/layout/activity_login_in.xml
+++ b/app/src/main/res/layout/activity_login_in.xml
@@ -75,17 +75,13 @@
         android:id="@+id/check_picture"
         android:src="@drawable/chaiquan"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/login_in"
-        android:text="登录"/>
+
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/get_picture"
-        android:text="获取验证码"/>
+        android:text="刷新验证码"/>
 
     <Button
         android:layout_width="match_parent"
