--- a/app/src/main/res/layout/activity_show_grade.xml
+++ b/app/src/main/res/layout/activity_show_grade.xml
@@ -10,12 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.palmneu.ShowGrade">
 
-    <ScrollView
+
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/show_grade_text"/>
-    </ScrollView>
+        android:layout_height="match_parent"
+        android:id="@+id/list_view">
+    </ListView>
+
+
 </RelativeLayout>
