--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/position_data"
+        android:id="@+id/map"
         android:text="地图"
         android:layout_below="@+id/login_in"
         android:layout_alignParentLeft="true"
