--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -13,6 +13,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/position_data"/>
+        android:id="@+id/position_data"
+        android:visibility="gone"/>
+
+    <com.baidu.mapapi.map.MapView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/bmapView"
+        android:clickable="true"
+        >
+    </com.baidu.mapapi.map.MapView>
 
 </RelativeLayout>
