--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -15,4 +15,10 @@
         android:layout_height="wrap_content"
         android:text="这里是社交界面"/>
 
+
+    <com.example.palmneu.BottomLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
