--- a/app/src/main/res/layout/activity_life.xml
+++ b/app/src/main/res/layout/activity_life.xml
@@ -14,4 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="这里是生活界面"/>
+
+    <com.example.palmneu.BottomLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
