连接校园网基本完工，添加了注释

--- a/app/src/main/res/layout/activity_wifi_login_in.xml
+++ b/app/src/main/res/layout/activity_wifi_login_in.xml
@@ -75,6 +75,19 @@
         android:id="@+id/connect_ipgw"
         android:text="登录" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/disconnect_ipgw"
+        android:text="断网" />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressbar"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
