--- a/app/src/main/res/layout/activity_wifi_login_in.xml
+++ b/app/src/main/res/layout/activity_wifi_login_in.xml
@@ -4,93 +4,137 @@
     android:id="@+id/activity_wifi_login_in"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wifi_login_background"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.example.palmneu.WifiLoginIn">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:weightSum="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="IP控制网关"
+            android:textColor="#000000"
+            android:textSize="30dp" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="18sp"
-            android:text="账户:" />
+            android:text="账户:"
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
         <EditText
+            android:id="@+id/account"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:id="@+id/account"
             android:hint="输入你的校园网账号"
-            android:layout_gravity="center_vertical"/>
+            android:textColor="#000000"
+            android:textColorHint="#000000" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:showDividers="end">
+
         <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="18sp"
-            android:text="密码"/>
+            android:text="密码:"
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
         <EditText
+            android:id="@+id/password"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:inputType="textPassword"
+            android:layout_weight="1"
             android:hint="请输入校园网密码"
-            android:id="@+id/password"/>
+            android:inputType="textPassword"
+            android:textColorHint="#000000" />
     </LinearLayout>
 
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <CheckBox
+            android:id="@+id/remember_pass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/remember_pass"/>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="94dp"
+            android:layout_marginRight="94dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="记住密码"/>
+            android:layout_alignBaseline="@+id/remember_pass"
+            android:layout_alignBottom="@+id/remember_pass"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="18dp"
+            android:layout_marginRight="18dp"
+            android:text="记住密码" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/connect_ipgw"
-        android:text="登录" />
-
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="登录"
+
+        />
+
+    <Button
         android:id="@+id/disconnect_ipgw"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="断网" />
 
     <ProgressBar
+        android:id="@+id/progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressbar"
         android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <TextView
+        android:id="@+id/wifi_login_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/wifi_login_in"/>
+        android:visibility="gone"/>
 
 </LinearLayout>
+
+
