--- a/app/src/main/res/layout/activity_login_in.xml
+++ b/app/src/main/res/layout/activity_login_in.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textSize="18sp"
-            android:text="密码"/>
+            android:text="密码:"/>
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -59,13 +59,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textSize="18sp"
-            android:text="验证码"/>
+            android:text="验证码:"/>
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:hint="点击“获取验证码”获取验证码"
+            android:hint="输入验证码"
             android:id="@+id/check_number"/>
     </LinearLayout>
 
