--- a/app/src/main/res/layout/activity_login_in.xml
+++ b/app/src/main/res/layout/activity_login_in.xml
@@ -9,7 +9,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/wifi_login_background"
     tools:context="com.example.palmneu.LoginIn">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:weightSum="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="教务处成绩查询"
+            android:textColor="#000000"
+            android:textSize="30dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,13 +83,23 @@
             android:layout_gravity="center_vertical"
             android:hint="输入验证码"
             android:id="@+id/check_number"/>
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:id="@+id/check_picture"
+            android:layout_weight="0.3"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
+
+        <ProgressBar
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:id="@+id/progressbar"
+            android:layout_gravity="center"/>
+
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:id="@+id/check_picture"
-        android:src="@drawable/chaiquan"/>
 
 
 
