修改了部分薛旸代码，测试通过

--- a/app/src/main/res/layout/setting_layout.xml
+++ b/app/src/main/res/layout/setting_layout.xml
@@ -35,6 +35,13 @@
             android:id="@+id/save_user_information"
             android:text="保存账号密码"
             />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_palm_neu"
+            android:text="登录掌上东大"
+            />
     </LinearLayout>
 
 </RelativeLayout>
