--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -84,12 +84,13 @@
             android:textSize="18sp"
             android:textColor="#000000"
             android:id="@+id/textView3" />
+
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:text="请输入你的昵称"
+            android:hint="请输入你的昵称"
             android:ems="10"
             android:id="@+id/nickname" />
     </LinearLayout>
@@ -111,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:text="请输入你的邮箱"
+            android:hint="请输入你的邮箱"
             android:ems="10"
             android:id="@+id/emailaddress" />
     </LinearLayout>
