--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -77,13 +77,37 @@
         android:layout_height="50dp"
         android:orientation="horizontal">
         <TextView
-            android:text="昵称："
+            android:text="密码："
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textSize="18sp"
             android:textColor="#000000"
             android:id="@+id/textView3" />
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="请确认你的密码"
+            android:ems="10"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/ensurepassword" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+        <TextView
+            android:text="昵称："
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textSize="18sp"
+            android:textColor="#000000"
+            android:id="@+id/textView4" />
 
         <EditText
             android:layout_width="0dp"
@@ -106,7 +130,7 @@
             android:layout_gravity="center_vertical"
             android:textSize="18sp"
             android:textColor="#000000"
-            android:id="@+id/textView4" />
+            android:id="@+id/textView5" />
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
