--- a/app/src/main/res/layout/contacts_layout.xml
+++ b/app/src/main/res/layout/contacts_layout.xml
@@ -12,8 +12,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button1"
-            android:text="按钮1"/>
+            android:id="@+id/see_note"
+            android:text="查看帖子"/>
 
         <ImageView
             android:layout_width="wrap_content"
