--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.palmneu.UserLogin">
+    tools:context="com.example.palmneu.UserLogin"
+    android:background="@drawable/wifi_login_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +22,7 @@
             android:layout_height="74dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="不知道写什么好"
+            android:text="登录掌上东大"
             android:textColor="#000000"
             android:textSize="30dp" />
     </LinearLayout>
