--- a/app/src/main/res/layout/activity_ecard_info.xml
+++ b/app/src/main/res/layout/activity_ecard_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:id="@+id/activity_ecard_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,4 +16,36 @@
         android:layout_height="wrap_content"
         android:id="@+id/textview"/>
 
-</RelativeLayout>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textviewstarttime"
+        android:text="2012-01-01"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/setstarttime"
+        android:text="设置开始日期"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textviewendtime"
+        android:text="2018-01-01"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/setendtime"
+        android:text="设置结束日期"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/get_consumeinfo"
+        android:text="查询消费记录"/>
+
+</LinearLayout>
