--- a/app/src/main/res/layout/activity_ecard_info.xml
+++ b/app/src/main/res/layout/activity_ecard_info.xml
@@ -11,18 +11,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.palmneu.EcardInfo">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <ImageView
+            android:layout_width="157dp"
+            android:layout_height="161dp"
+            android:id="@+id/photo"
+            android:visibility="gone" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textview"
+            android:text="正在获取消息"/>
+
+
+
+
+    </LinearLayout>
+
+
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textview"/>
-
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textviewstarttime"
-        android:text="2012-01-01"/>
+        android:id="@+id/textviewstarttime" />
 
     <Button
         android:layout_width="wrap_content"
@@ -33,8 +51,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textviewendtime"
-        android:text="2018-01-01"/>
+        android:id="@+id/textviewendtime"/>
 
     <Button
         android:layout_width="wrap_content"
