可以查询出消费记录了，但是只有第一页可以查

--- a/app/src/main/res/layout/activity_ecard_info.xml
+++ b/app/src/main/res/layout/activity_ecard_info.xml
@@ -37,32 +37,61 @@
 
 
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textviewstarttime" />
+        android:orientation="horizontal">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/setstarttime"
-        android:text="设置开始日期"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textviewstarttime"
+            android:textSize="25sp"
+            android:text="请选择日期"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textviewendtime"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/setstarttime"
+            android:layout_gravity="right"
+            android:text="设置开始日期"/>
+    </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/setendtime"
-        android:text="设置结束日期"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textviewendtime"
+            android:textSize="25sp"
+            android:text="请选择日期"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/setendtime"
+            android:text="设置结束日期"/>
+
+    </LinearLayout>
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/get_consumeinfo"
+        android:layout_gravity="right"
         android:text="查询消费记录"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/final_item"/>
+    </ScrollView>
 </LinearLayout>
