--- a/app/src/main/res/layout/activity_login_in.xml
+++ b/app/src/main/res/layout/activity_login_in.xml
@@ -107,7 +107,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/get_picture"
-        android:text="刷新验证码"/>
+        android:text="刷新验证码"
+        android:visibility="gone"/>
 
     <Button
         android:layout_width="match_parent"
