--- a/app/src/main/res/layout/activity_ecard_info.xml
+++ b/app/src/main/res/layout/activity_ecard_info.xml
@@ -35,8 +35,6 @@
     </LinearLayout>
 
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -85,6 +83,12 @@
         android:id="@+id/get_consumeinfo"
         android:layout_gravity="right"
         android:text="查询消费记录"/>
+
+    <Button
+        android:text="查询圈存记录"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/get_transferinfo" />
 
     <ScrollView
         android:layout_width="match_parent"
