发帖功能完成

--- a/app/src/main/res/layout/contacts_layout.xml
+++ b/app/src/main/res/layout/contacts_layout.xml
@@ -15,6 +15,12 @@
             android:id="@+id/see_note"
             android:text="查看帖子"/>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/send_note"
+            android:text="发送帖子"/>
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
