--- a/app/src/main/res/layout/activity_send_note.xml
+++ b/app/src/main/res/layout/activity_send_note.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.palmneu.SendNote">
+    tools:context="com.example.palmneu.SendNote"
+    android:weightSum="1">
 
     <EditText
         android:layout_width="match_parent"
@@ -18,10 +19,10 @@
         android:id="@+id/noteTitle"/>
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_width="338dp"
+        android:layout_height="156dp"
         android:hint="帖子内容"
-        android:id="@+id/noteContent"/>
+        android:id="@+id/noteContent" />
 
     <Button
         android:layout_width="wrap_content"
@@ -29,6 +30,26 @@
         android:id="@+id/sendnote"
         android:text="发送帖子"/>
 
+    <Button
+        android:text="添加图片"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addpic" />
 
+    <ImageView
+        android:id="@+id/picture1"
+        android:layout_width="220dp"
+        android:layout_height="150dp"
+        android:src="@drawable/common_google_signin_btn_text_dark"/>
+
+    <ImageView
+        android:id="@+id/picture2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/picture3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
