解决图书馆记录的滑动问题

--- a/app/src/main/res/layout/activity_library_info.xml
+++ b/app/src/main/res/layout/activity_library_info.xml
@@ -6,11 +6,12 @@
     tools:context="com.example.palmneu.LibraryInfo">
 
 
-<TextView
+    <TextView
         android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/viewUserInfo" />
+        android:id="@+id/viewUserInfo"
+        android:scrollbars="vertical"/>
 
     <Button
         android:text="未还图书"
