--- a/app/src/main/res/layout/activity_reply_note.xml
+++ b/app/src/main/res/layout/activity_reply_note.xml
@@ -12,7 +12,7 @@
     tools:context="com.example.palmneu.ReplyNote">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:id="@+id/reply_recycler_view"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
